{
  "version": 4,
  "terraform_version": "1.4.0",
  "serial": 18,
  "lineage": "94430f10-a8b4-a5f0-248d-056687b2e7e2",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:554660509057:security-group/sg-0a64e771313689772",
            "description": "default VPC security group",
            "filter": null,
            "id": "sg-0a64e771313689772",
            "name": "default",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0ce7889ae8fafd3f6"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "httpd",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:554660509057:loadbalancer/net/chandra/7ec3b4066358cfcc",
            "arn_suffix": "net/chandra/7ec3b4066358cfcc",
            "dns_name": "chandra-7ec3b4066358cfcc.elb.us-east-2.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:554660509057:loadbalancer/net/chandra/7ec3b4066358cfcc",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "chandra",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-049e167d6868285e3"
              },
              {
                "subnet_id": "subnet-0cec0adf2b8c6f001"
              },
              {
                "subnet_id": "subnet-0e4beaff8a149b3f3"
              }
            ],
            "subnets": [
              "subnet-049e167d6868285e3",
              "subnet-0cec0adf2b8c6f001",
              "subnet-0e4beaff8a149b3f3"
            ],
            "tags": {
              "Name": "chandra"
            },
            "tags_all": {
              "Name": "chandra"
            },
            "vpc_id": "vpc-0ce7889ae8fafd3f6",
            "zone_id": "ZLMOA37VPKANP"
          },
          "dependencies": [
            "module.create_subnet.aws_subnet.aws_subnet",
            "module.create_subnet.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:554660509057:listener/net/chandra/7ec3b4066358cfcc/890e3a8eff71abe0",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:554660509057:targetgroup/chandra/c68465a2181e71e7",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:554660509057:listener/net/chandra/7ec3b4066358cfcc/890e3a8eff71abe0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:554660509057:loadbalancer/net/chandra/7ec3b4066358cfcc",
            "port": 80,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {
              "Name": "chandra"
            },
            "tags_all": {
              "Name": "chandra"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.httpd",
            "aws_lb_target_group.tg_80",
            "module.create_subnet.aws_subnet.aws_subnet",
            "module.create_subnet.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:554660509057:targetgroup/chandra/c68465a2181e71e7",
            "arn_suffix": "targetgroup/chandra/c68465a2181e71e7",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:554660509057:targetgroup/chandra/c68465a2181e71e7",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "chandra",
            "port": 80,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Name": "chandra"
            },
            "tags_all": {
              "Name": "chandra"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ce7889ae8fafd3f6"
          }
        }
      ]
    },
    {
      "module": "module.create_subnet",
      "mode": "data",
      "type": "aws_vpc",
      "name": "aws_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:554660509057:vpc/vpc-0ce7889ae8fafd3f6",
            "cidr_block": "10.10.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-074ea86b1bd8cd12e",
                "cidr_block": "10.10.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-2f524347",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ce7889ae8fafd3f6",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0493d207a1f1069c1",
            "owner_id": "554660509057",
            "tags": {
              "Name": "kul"
            }
          }
        }
      ]
    },
    {
      "module": "module.create_subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aws_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:554660509057:subnet/subnet-049e167d6868285e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.10.20.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-049e167d6868285e3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "554660509057",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "chandra_public_20",
              "Type": "public"
            },
            "tags_all": {
              "Name": "chandra_public_20",
              "Type": "public"
            },
            "vpc_id": "vpc-0ce7889ae8fafd3f6"
          },
          "dependencies": [
            "module.create_subnet.data.aws_availability_zones.azs",
            "module.create_subnet.data.aws_vpc.aws_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:554660509057:subnet/subnet-0cec0adf2b8c6f001",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.10.21.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cec0adf2b8c6f001",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "554660509057",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "chandra_public_21",
              "Type": "public"
            },
            "tags_all": {
              "Name": "chandra_public_21",
              "Type": "public"
            },
            "vpc_id": "vpc-0ce7889ae8fafd3f6"
          },
          "dependencies": [
            "module.create_subnet.data.aws_availability_zones.azs",
            "module.create_subnet.data.aws_vpc.aws_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:554660509057:subnet/subnet-0e4beaff8a149b3f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.10.22.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e4beaff8a149b3f3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "554660509057",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "chandra_public_22",
              "Type": "public"
            },
            "tags_all": {
              "Name": "chandra_public_22",
              "Type": "public"
            },
            "vpc_id": "vpc-0ce7889ae8fafd3f6"
          },
          "dependencies": [
            "module.create_subnet.data.aws_availability_zones.azs",
            "module.create_subnet.data.aws_vpc.aws_vpc"
          ]
        }
      ]
    }
  ]
}